Get rid of sbt run warnings.